--- a/effects.css
+++ b/effects.css
@@ -14,3 +14,193 @@
     width: 100%;
 }
 
+.ex-3-square {
+    transition: .5s linear;
+}
+
+.ex-3-square:hover {
+    border-radius: 50%;
+}
+
+.ex-4-square {
+    transition: 1s ease-in-out;
+}
+
+.ex-4-square:hover {
+    opacity: 0;
+}
+
+.ex-5-square {
+    transition: .5s linear;
+}
+
+.ex-5-square:hover {
+    transform: scale(2);
+}
+
+.ex-5-square:active {
+    transform: scale(0.5);
+}
+
+.ex-6-img:hover {
+    filter: grayscale(1);
+}
+
+.ex-7-img {
+    transition: 1s linear;
+}
+
+.ex-7-img:hover {
+    filter: grayscale(1) brightness(.5);
+}
+
+.ex-8-img {
+    transition: 1.5s ease-out;
+}
+
+.ex-8-img:hover {
+    filter: sepia(.5) grayscale(.5);
+    border-radius: 10px;
+}
+
+.ex-9-img {
+    transition: 1s linear;
+}
+
+.ex-9-img:hover {
+    filter: sepia(.5) grayscale(.5);
+    border-radius: 10px;
+    transform: scale(1.5);
+}
+
+.ex-10-icon {
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(360deg);
+    }    
+}
+
+.ex-11-icon:hover {
+    animation: spinquarter 1s linear alternate;
+}
+
+@keyframes spinquarter {
+    0%  {
+        transform: rotate(0deg);
+    }
+    75% {
+        transform: rotate(270deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+.ex-12-button:hover .ex-12-top-white {
+    animation: movetop 2s linear;
+}
+
+@keyframes movetop {
+    0% {
+        left: 10%;
+    }
+
+    50% {
+        left: 50%;
+    }
+
+    100% {
+        left: 10%;
+    }
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: movebottom 2s linear;
+}
+
+@keyframes movebottom {
+    0% {
+        right: 20%;
+    }
+
+    50% {
+        right: 50%;
+    }
+
+    100% {
+        right: 20%;
+    }
+}
+
+.ex-13-button:hover .ex-13-top-white {
+    animation: movetopcomplete 2s ease-out;
+}
+
+@keyframes movetopcomplete {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    25% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+
+    50% {
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+
+    75% {
+        left: 0px;
+        top: 100%;
+    }
+
+    80% {
+        left: -10px;
+        top: -10px;
+    }
+
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: movebottomcomplete 2s ease-out;
+}
+
+@keyframes movebottomcomplete {
+    0% {
+        right: 20%;
+        bottom: -10px;
+    }
+    25% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+
+    50% {
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+
+    75% {
+        right: 0px;
+        bottom: 100%;
+    }
+
+    80% {
+        right: -10px;
+        bottom: -10px;
+    }
+
+    100% {
+        right: 20%;
+        bottom: -10px;
+    }
+}
